github_data_collector/src/data/issue_comment/MarlinFirmware_Marlin.txt
Please help with a compilation error of the latest version of bugfix-2.0.x motherboard SKR E3 MINI 1.2




In file included from Marlin\src\HAL\HAL_STM32F1\../../inc/MarlinConfigPre.h:54:0,
                 from Marlin\src\HAL\HAL_STM32F1\../../inc/MarlinConfig.h:28,
                 from Marlin\src\HAL\HAL_STM32F1\HAL.cpp:30:
Marlin\src\HAL\HAL_STM32F1\../../inc/../core/drivers.h:71:51: error: missing binary operator before token "("
 #define AXIS_DRIVER_TYPE(A,T) AXIS_DRIVER_TYPE_##A(T)
                                                   ^
Marlin\src\HAL\HAL_STM32F1\../../inc/../core/drivers.h:106:31: note: in expansion of macro 'AXIS_DRIVER_TYPE'
 #define AXIS_IS_TMC(A)   (    AXIS_DRIVER_TYPE(A,TMC2130) \
                               ^~~~~~~~~~~~~~~~
Marlin\src\HAL\HAL_STM32F1\../../inc/../../Configuration_adv.h:2025:7: note: in expansion of macro 'AXIS_IS_TMC'
   #if AXIS_IS_TMC(Z4)
       ^~~~~~~~~~~
In file included from Marlin\src\HAL\HAL_STM32F1\../../inc/MarlinConfigPre.h:54:0,
                 from Marlin\src\HAL\HAL_STM32F1\../../inc/MarlinConfig.h:28,
                 from Marlin\src\HAL\HAL_STM32F1\HAL_SPI.cpp:35:
Marlin\src\HAL\HAL_STM32F1\../../inc/../core/drivers.h:71:51: error: missing binary operator before token "("
 #define AXIS_DRIVER_TYPE(A,T) AXIS_DRIVER_TYPE_##A(T)
                                                   ^
Marlin\src\HAL\HAL_STM32F1\../../inc/../core/drivers.h:106:31: note: in expansion of macro 'AXIS_DRIVER_TYPE'
 #define AXIS_IS_TMC(A)   (    AXIS_DRIVER_TYPE(A,TMC2130) \

 ^~~~~~~~~~~~~~~~
Marlin\src\HAL\HAL_STM32F1\../../inc/../../Configuration_adv.h:2025:7: note: in expansion of macro 'AXIS_IS_TMC'
   #if AXIS_IS_TMC(Z4)

       ^~~~~~~~~~~
In file included from Marlin\src\HAL\HAL_STM32F1\../../inc/MarlinConfigPre.h:54:0,
                 from Marlin\src\HAL\HAL_STM32F1\../../inc/MarlinConfig.h:28,
                 from Marlin\src\HAL\HAL_STM32F1\Servo.cpp:26:
Marlin\src\HAL\HAL_STM32F1\../../inc/../core/drivers.h:71:51: error: missing binary operator before token "("
 #define AXIS_DRIVER_TYPE(A,T) AXIS_DRIVER_TYPE_##A(T)
                                                   ^
Marlin\src\HAL\HAL_STM32F1\../../inc/../core/drivers.h:106:31: note: in expansion of macro 'AXIS_DRIVER_TYPE'
 #define AXIS_IS_TMC(A)   (    AXIS_DRIVER_TYPE(A,TMC2130) \
                               ^~~~~~~~~~~~~~~~
Marlin\src\HAL\HAL_STM32F1\../../inc/../../Configuration_adv.h:2025:7: note: in expansion of macro 'AXIS_IS_TMC'
   #if AXIS_IS_TMC(Z4)
       ^~~~~~~~~~~
In file included from Marlin\src\HAL\HAL_STM32F1\dogm\../../../inc/MarlinConfigPre.h:54:0,
                 from Marlin\src\HAL\HAL_STM32F1\dogm\../../../inc/MarlinConfig.h:28,
                 from Marlin\src\HAL\HAL_STM32F1\dogm\u8g_com_stm32duino_fsmc.cpp:29:
Marlin\src\HAL\HAL_STM32F1\dogm\../../../inc/../core/drivers.h:71:51: error: missing binary operator before token "("
 #define AXIS_DRIVER_TYPE(A,T) AXIS_DRIVER_TYPE_##A(T)
                                                   ^
Marlin\src\HAL\HAL_STM32F1\dogm\../../../inc/../core/drivers.h:106:31: note: in expansion of macro 'AXIS_DRIVER_TYPE'
 #define AXIS_IS_TMC(A)   (    AXIS_DRIVER_TYPE(A,TMC2130) \
                               ^~~~~~~~~~~~~~~

Marlin\src\HAL\HAL_STM32F1\dogm\../../../inc/../../Configuration_adv.h:2025:7: note: in expansion of macro 'AXIS_IS_TMC'
   #if AXIS_IS_TMC(Z4)
       ^~~~~~~~~~~
*** [.pio\build\STM32F103RC_bigtree\src\src\HAL\HAL_STM32F1\Servo.cpp.o] Error 1
*** [.pio\build\STM32F103RC_bigtree\src\src\HAL\HAL_STM32F1\HAL_SPI.cpp.o] Error 1
*** [.pio\build\STM32F103RC_bigtree\src\src\HAL\HAL_STM32F1\HAL.cpp.o] Error 1
*** [.pio\build\STM32F103RC_bigtree\src\src\HAL\HAL_STM32F1\dogm\u8g_com_stm32duino_fsmc.cpp.o] Error 1
When the machine finish the heating, It read the file very quickly, the stepper even didn't start to move the print job had finished.
I used computer to log the communication. I found, what ever send to the printer, It replied "OK" immediately. I supposed, It should reply "bussing". 
When I operate It manually It works properly. 
I don't know what happened. I have tried to use a another slicer software, but It doesn't work. So I suspect the problem is about the firmware, and looking for help here.
By the way, the printer just been assembly and haven't work before. It's a Kossel, and the version of firmware is 1.1.3.
### Bug Description
My Auto Level feature is not working, it homes, then nothing happens. I suspect perhaps it has to do something with speed during leveling but i am really uncertain. My next idea is to start with a new configuration and make modifications one by one for variables i am certain about.

### My Configurations
https://pastebin.com/raw/ETvBQkFx

### Steps to Reproduce
Select Auto Level in LCD

**Expected behavior:** [What you expect to happen]
9 Point Bi-linear Leveling Procedure

**Actual behavior:** [What actually happens]
Auto Home, then no further movement.
There may be a problem with one of the versions of platformio's **framework-arduinoststm32**.

I ran into a failure of a macro so I created PR #16589 to fix it.   After that I ran into some other strange compile issues so I deleted  the **.platformio\packages\framework-arduinoststm32** directory and did a clean compile.  All the problems were gone after that.

Now I see lots of PRs failing a test as a result of a macro problem on a STM32 board.

Could they be related?
Adding first shield to AGCM. I Hope to put my hands on it as soon as @MrAlvin will be ready and to finally test a real system

@MrAlvin if you have some time please validate pinout

N.B. current SAMD framework has an issue with usb serial and Marlin will "forget" some chars when send to host. Fix has been already merged into new adafruit framework, but PlatformIO has not been updated yet
Hi,
I'm struggeling the whole day already to get the SKR PRO v1.1 working again. I had a certain version of this repo with my configs. Just wanted to change a Value on STEPS_PER_UNIT and compile and put it on the printer. Now I'm not able to connect anymore and when the Board is powered via my powersupply Windows is not able to recognize the board.
Serial Port is set to -1, so it should tell Marlin to use the USB Port. 

Can someone upload a marlin project (with firmware.bin, config, etc) that is working for him with USB Port. I just want to know if my board is somehow bricked or not. 

Any one else facing issues getting the SKR Pro to run ? 

Dear all.

### Bug Description

I checked out the latest revision of the bugfix-2.0.x branch (80400ab) and noticed, that the steppers won't move on my SKR Pro board. Instead of moving, the steppers some high frequency noice and then the printer halts.

### My Configurations
SKR Pro v1.1
TMC5160 for all steppers
CoreXY kinematics
[config.zip](https://github.com/MarlinFirmware/Marlin/files/4080933/config.zip)


### Steps to Reproduce

1. Update firmware
2. Auto home printer

**Expected behavior:** Printer homes.

**Actual behavior:** Stepper motors make high frequency noice and the printer halts.

#### Additional Information
The bug was introduced when merging #16452 (1ad53cee). I traced the bug down to the file Marlin/src/HAL/HAL_STM32/timers.h:65: `#define STEP_TIMER 9  // STM32F401 has no TIM6, TIM7, or TIM8`
When I change this line to `#define STEP_TIMER 6` as it was before, the printer works fine.

I didn't create a PR because I did'nt know if this issue has to be fixed in that file or in the pins.h for the SKR Pro. Based on the comment of that line, fixing this bug for me might break other printers.
Many slim configurations left the motion menu completely empty. This puts the single most commonly needed item (e step calibration) present for most configurations.
With mesh bed leveling, manual probing is implied and functions need to be included.
Hi,

As stated in the PR title, it fixes #16598 .

Regards,
Orel